next button implementation

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <iframe id="ytplayer" type="text/html" width="640" height="360"
   frameborder="0" allowfullscreen src=""></iframe>
 </div>
-  <button id="nextButton">Skip</button>
+  <button id="nextButton">Next</button>
   <footer>
     <div>
       <table id="linkTable">
